--- a/index.html
+++ b/index.html
@@ -220,12 +220,12 @@
 			  <div class="ul-wapper"> <!-- 设置选项卡的总宽带，sum(li * width) -->
 			  	<ul class="nav nav-tabs" role="tablist">
 				    <li role="presentation" class="active"><a href="#tab_1" aria-controls="tab_1" role="tab" data-toggle="tab">特别推荐</a></li>
-				    <li role="presentation"><a href="#tab_2" aria-controls="tab_2" role="tab" data-toggle="tab">微投资</a></li>
-				    <li role="presentation"><a href="#tab_3" aria-controls="tab_3" role="tab" data-toggle="tab">微小宝</a></li>
-				    <li role="presentation"><a href="#tab_4" aria-controls="tab_4" role="tab" data-toggle="tab">微消费</a></li>
-				    <li role="presentation"><a href="#tab_5" aria-controls="tab_5" role="tab" data-toggle="tab">微福利</a></li>
-				    <li role="presentation"><a href="#tab_6" aria-controls="tab_6" role="tab" data-toggle="tab">微金宝</a></li>
-				    <li role="presentation"><a href="#tab_7" aria-controls="tab_7" role="tab" data-toggle="tab">微转让</a></li>
+				    <li role="presentation"><a href="#tab_2" aria-controls="tab_2" role="tab" data-toggle="tab">产品介绍</a></li>
+				    <li role="presentation"><a href="#tab_3" aria-controls="tab_3" role="tab" data-toggle="tab">产品介绍</a></li>
+				    <li role="presentation"><a href="#tab_4" aria-controls="tab_4" role="tab" data-toggle="tab">产品介绍</a></li>
+				    <li role="presentation"><a href="#tab_5" aria-controls="tab_5" role="tab" data-toggle="tab">产品介绍</a></li>
+				    <li role="presentation"><a href="#tab_6" aria-controls="tab_6" role="tab" data-toggle="tab">产品介绍</a></li>
+				    <li role="presentation"><a href="#tab_7" aria-controls="tab_7" role="tab" data-toggle="tab">产品介绍</a></li>
 				    <li class="pull-right hidden-xs"><a href="">更多</a></li>
 			 	 </ul>
 			  </div>
