--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 
     <!-- 按最新IE版本渲染页面 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="打桩机,全自动,人工,省事">
+    <meta name="description" content="子东打桩机为您提供省时省力的全自动服务">
     <!-- 声明当前网页在移动的浏览器展示的设置 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>上海子东控制设备有限公司</title>
     <!-- 引入Bootstrap的样式表 -->
+    <link rel="shortcut icon" type="image/x-icon" href="./img/title.ico">
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
